# MealPlanningAssistant

./: .dockerignore  .gitignore  API_DOCS.md  GETTING_STARTED.md  README.md  api_test.py  app.py  docker-compose.yml  pyproject.toml  test.py
agents/: meal_planner.py  tools.py
backend/: .env.example  .gitignore  Dockerfile  app.py  config.py  document_processor.py  rag_engine.py  requirements.txt
backend/app/: api.py  ingester.py  redis_session_manager.py  session_chat_handler.py  user_memory_store.py
data/: raw_recipes.json  spoonacular_data_options.py  test_json.py  user_memory.json
frontend/: .env.example  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: ChatInterface.js  DocumentUpload.js
frontend/src/services/: api.js
frontend/src/styles/: App.css  ChatInterface.css  DocumentUpload.css  index.css
rag/: embed.py  index.py  ingestion.py  normalize.py  pipeline.py  query.py  recipe_store.py  transform.py  validate.py  verify.py
